Added private vs public to the global stats.

--- a/app/html/global-stats.html
+++ b/app/html/global-stats.html
@@ -11,6 +11,7 @@
 var pies = {
 	"ActiveGameHistograms-Variant": true,
 	"ActiveGameHistograms-NMembers": true,
+	"ActiveGameHistograms-Private": true,
 };
 function drawPie(histType, histName, data) {
 	var id = histType + '-' + histName;
