Stats for chat settings.

--- a/app/html/global-stats.html
+++ b/app/html/global-stats.html
@@ -12,6 +12,9 @@ var pies = {
 	"ActiveGameHistograms-Variant": true,
 	"ActiveGameHistograms-NMembers": true,
 	"ActiveGameHistograms-Private": true,
+	"ActiveGameHistograms-ConferenceChat": true,
+	"ActiveGameHistograms-GroupChat": true,
+	"ActiveGameHistograms-PrivateChat": true,
 };
 function drawPie(histType, histName, data) {
 	var id = histType + '-' + histName;
