Added nation allocation to the active game histograms.

--- a/app/html/global-stats.html
+++ b/app/html/global-stats.html
@@ -15,6 +15,7 @@ var pies = {
 	"ActiveGameHistograms-ConferenceChat": true,
 	"ActiveGameHistograms-GroupChat": true,
 	"ActiveGameHistograms-PrivateChat": true,
+	"ActiveGameHistograms-NationAllocation": true,
 };
 function drawPie(histType, histName, data) {
 	var id = histType + '-' + histName;
